# hugin-macos-community

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  UPSTREAM.md
.github/workflows/: repository-checks.yml
docs/: architecture.md  first-deliverables.md  product-design.md  upstream-import.md
docs/build-audits/: apple-silicon-2026-07-22.md
docs/packaging/: phase-2.md
scripts/: fetch-upstream.sh  import-upstream-snapshot.sh
scripts/macos/: bootstrap-deps.sh  build-dev.sh  build-vigra.sh  bundle-app-deps.sh  inspect-app-deps.sh  list-app-bundles.sh  notarize-release.sh  package-dmg.sh  package-release.sh  package-unsigned-apps.sh  sign-app.sh  smoke-cli-fixture.sh  validate-release.sh
upstream/hugin/: .hg_archival.txt  CMakeLists.txt  Changes.txt  INSTALL_cmake  README  UPSTREAM-SNAPSHOT  rev.txt
upstream/hugin/CMakeModules/: FindOpenEXR.cmake  FindVIGRA.cmake  win_bundle.cmake
upstream/hugin/src/: CMakeLists.txt  hugin_config.h.in.cmake
upstream/hugin/src/foreign/levmar/: compiler.h
upstream/hugin/src/hugin1/: CMakeLists.txt
upstream/hugin/src/hugin1/base_wx/: AssistantExecutor.cpp  CMakeLists.txt  CommandHistory.cpp  Executor.cpp  Executor.h  GraphTools.cpp  HFOVDialog.cpp  HFOVDialog.h  LensTools.cpp  MyExternalCmdExecDialog.cpp  MyExternalCmdExecDialog.h  MyProgressDialog.cpp  MyProgressDialog.h  PTWXDlg.cpp  RunStitchPanel.cpp  RunStitchPanel.h  StitchingExecutor.cpp  huginConfig.cpp  huginConfig.h  platform.cpp  platform.h  wxImageCache.cpp  wxLensDB.cpp  wxPanoCommand.cpp  wxPlatform.cpp  wxPlatform.h  wxcms.cpp  wxutils.cpp  wxutils.h
upstream/hugin/src/hugin1/calibrate_lens/: CMakeLists.txt  LensCalApp.cpp  LensCalApp.h  LensCalFrame.cpp  LensCalFrame.h  LensCalImageCtrl.cpp  LensCalImageCtrl.h
upstream/hugin/src/hugin1/executor/: hugin_executor.cpp
upstream/hugin/src/hugin1/hugin/: AboutDialog.cpp  AboutDialog.h  BrowseDialog.cpp  BrowseDialog.h  CMakeLists.txt  CPDetectorDialog.cpp  CPDetectorDialog.h  CPEditorPanel.cpp  CPEditorPanel.h  CPImageCtrl.cpp  CPImageCtrl.h  CPImagesComboBox.cpp  CPImagesComboBox.h  CPListFrame.cpp  CPListFrame.h  ChangeImageVariableDialog.cpp  ChangeImageVariableDialog.h  ChoosyRemapper.cpp  EditOutputIniDialog.cpp  GLPreviewFrame.cpp  GLPreviewFrame.h  GLViewer.cpp  GLViewer.h  GreatCircles.cpp  GreatCircles.h  HDRMergeOptionDialog.cpp  HDRMergeOptionDialog.h  HtmlWindow.cpp  ImageVariableDialog.cpp  ImageVariableDialog.h  ImagesPanel.cpp  ImagesPanel.h  ImagesTree.cpp  ImagesTree.h  LayoutRemapper.cpp  LocalizedFileTipProvider.cpp  MainFrame.cpp  MainFrame.h  MaskEditorPanel.cpp  MaskEditorPanel.h  (+42 more)
upstream/hugin/src/hugin1/icpfind/: AutoCtrlPointCreator.cpp  CMakeLists.txt  CPDetectorConfig.cpp  icpfind.cpp
upstream/hugin/src/hugin1/ptbatcher/: Batch.cpp  Batch.h  BatchFrame.cpp  BatchFrame.h  BatchTrayIcon.cpp  BatchTrayIcon.h  CMakeLists.txt  ChangeUserDefinedDialog.cpp  ChangeUserDefinedDialog.h  DirTraverser.h  FailedProjectsDialog.cpp  FailedProjectsDialog.h  FindPanoDialog.cpp  FindPanoDialog.h  GenerateSequenceDialog.cpp  GenerateSequenceDialog.h  PTBatcherGUI.cpp  PTBatcherGUI.h  ProgressStatusBar.cpp  ProgressStatusBar.h  ProjectArray.cpp  ProjectListBox.cpp  ProjectListBox.h  RunStitchFrame.cpp  RunStitchFrame.h
upstream/hugin/src/hugin1/stitch_project/: CMakeLists.txt  hugin_stitch_project.cpp
upstream/hugin/src/hugin1/toolbox/: CMakeLists.txt  CreateBrightImgDlg.cpp  CreateBrightImgDlg.h  EnfusePanel.cpp  EnfusePanel.h  PerspectiveImageCtrl.cpp  PerspectiveImageCtrl.h  PerspectivePanel.cpp  PerspectivePanel.h  PreviewWindow.cpp  PreviewWindow.h  StackerPanel.cpp  StackerPanel.h  ToolboxApp.cpp  ToolboxApp.h  ToolboxFrame.cpp  ToolboxFrame.h  hugin_toolbox_gui.desktop
upstream/hugin/src/hugin_base/: CMakeLists.txt
upstream/hugin/src/hugin_base/hugin_math/: hugin_math.h
upstream/hugin/src/hugin_base/hugin_utils/: utils.cpp  utils.h
upstream/hugin/src/hugin_base/huginapp/: ImageCache.cpp  ImageCache.h
upstream/hugin/src/hugin_base/lines/: FindLines.cpp  FindLines.h  FindN8Lines.cpp
upstream/hugin/src/hugin_base/nona/: SpaceTransform.cpp
upstream/hugin/src/hugin_base/panodata/: Exiv2Helper.cpp  Mask.cpp  Mask.h
upstream/hugin/src/hugin_base/vigra_ext/: BlendPoisson.h  Correlation.h  ImageTransformsGPU.cpp  cms.h
upstream/hugin/src/tools/: align_image_stack.cpp  checkpto.cpp  hugin_lensdb.cpp  linefind.cpp  nona.cpp  pto_gen.cpp  pto_move.cpp  stacker.cpp
upstream/hugin/src/translations/: ca_ES.po  ca_ES@valencia.po  cs_CZ.po  da.po  de.po  en_GB.po  es.po  eu.po  fi.po  fr.po  hu.po  hugin.pot  it.po  ja.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  zh_CN.po  zh_TW.po
(+32 files in other folders)
